--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -2,25 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os"
+    "import sys, os\n",
+    "sys.path.append(os.path.abspath(\"..\"))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'d:\\\\CDAC\\\\Project'"
+       "'d:\\\\CDAC\\\\Project\\\\AI-Driven-Personal-Financial-Risk-Spending-Behavior-Analyzer'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,29 +87,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'MLOPs'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[26]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msrc\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mMLOPs\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mutils\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcommon\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m read_yaml, create_directories\n",
-      "\u001b[36mFile \u001b[39m\u001b[32md:\\CDAC\\Project\\AI-Driven-Personal-Financial-Risk-Spending-Behavior-Analyzer\\src\\MLOPs\\utils\\common.py:4\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mbox\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mexceptions\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m BoxValueError\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01myaml\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mMLOPs\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m logger\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mjson\u001b[39;00m\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mjoblib\u001b[39;00m\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'MLOPs'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from src.MLOPs.utils.common import read_yaml, create_directories"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,20 +132,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import urllib.request as request\n",
     "import zipfile\n",
-    "from mlProject import logger\n",
-    "from mlProject.utils.common import get_size"
+    "from src.MLOPs import logger\n",
+    "from src.MLOPs.utils.common import get_size"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,45 +182,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-07-11 09:48:52,013: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2023-07-11 09:48:52,015: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-07-11 09:48:52,017: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2023-07-11 09:48:52,020: INFO: common: created directory at: artifacts]\n",
-      "[2023-07-11 09:48:52,021: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2023-07-11 09:48:53,478: INFO: 2366278714: artifacts/data_ingestion/data.zip download! with following info: \n",
-      "Connection: close\n",
-      "Content-Length: 23329\n",
-      "Cache-Control: max-age=300\n",
-      "Content-Security-Policy: default-src 'none'; style-src 'unsafe-inline'; sandbox\n",
-      "Content-Type: application/zip\n",
-      "ETag: \"c69888a4ae59bc5a893392785a938ccd4937981c06ba8a9d6a21aa52b4ab5b6e\"\n",
-      "Strict-Transport-Security: max-age=31536000\n",
-      "X-Content-Type-Options: nosniff\n",
-      "X-Frame-Options: deny\n",
-      "X-XSS-Protection: 1; mode=block\n",
-      "X-GitHub-Request-Id: 3E94:6864:6F310:85DCD:64ACD122\n",
-      "Accept-Ranges: bytes\n",
-      "Date: Tue, 11 Jul 2023 03:48:51 GMT\n",
-      "Via: 1.1 varnish\n",
-      "X-Served-By: cache-hkg17928-HKG\n",
-      "X-Cache: MISS\n",
-      "X-Cache-Hits: 0\n",
-      "X-Timer: S1689047331.016661,VS0,VE353\n",
-      "Vary: Authorization,Accept-Encoding,Origin\n",
-      "Access-Control-Allow-Origin: *\n",
-      "Cross-Origin-Resource-Policy: cross-origin\n",
-      "X-Fastly-Request-ID: 43493bd55c5e75d012dfa4dd102f06d0b14306ba\n",
-      "Expires: Tue, 11 Jul 2023 03:53:51 GMT\n",
-      "Source-Age: 0\n",
-      "\n",
-      "]\n"
+      "[2026-01-19 23:39:51,906: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2026-01-19 23:39:51,910: INFO: common: yaml file: params.yaml loaded successfully]\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "yaml file is empty",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mBoxValueError\u001b[39m                             Traceback (most recent call last)",
+      "\u001b[36mFile \u001b[39m\u001b[32md:\\CDAC\\Project\\AI-Driven-Personal-Financial-Risk-Spending-Behavior-Analyzer\\src\\MLOPs\\utils\\common.py:31\u001b[39m, in \u001b[36mread_yaml\u001b[39m\u001b[34m(path_to_yaml)\u001b[39m\n\u001b[32m     30\u001b[39m         logger.info(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33myaml file: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpath_to_yaml\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m loaded successfully\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m31\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mConfigBox\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcontent\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     32\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m BoxValueError:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Admin\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\box\\box.py:247\u001b[39m, in \u001b[36mBox.__init__\u001b[39m\u001b[34m(self, default_box, default_box_attr, default_box_none_transform, default_box_create_on_get, frozen_box, camel_killer_box, conversion_box, modify_tuples_box, box_safe_prefix, box_duplicates, box_intact_types, box_recast, box_dots, box_class, *args, **kwargs)\u001b[39m\n\u001b[32m    246\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(args[\u001b[32m0\u001b[39m], \u001b[38;5;28mstr\u001b[39m):\n\u001b[32m--> \u001b[39m\u001b[32m247\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m BoxValueError(\u001b[33m\"\u001b[39m\u001b[33mCannot extrapolate Box from string\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    248\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(args[\u001b[32m0\u001b[39m], Mapping):\n",
+      "\u001b[31mBoxValueError\u001b[39m: Cannot extrapolate Box from string",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[48]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      6\u001b[39m     data_ingestion.extract_zip_file()\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m e\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[48]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m     config = \u001b[43mConfigurationManager\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m     data_ingestion_config = config.get_data_ingestion_config()\n\u001b[32m      4\u001b[39m     data_ingestion = DataIngestion(config=data_ingestion_config)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[41]\u001b[39m\u001b[32m, line 9\u001b[39m, in \u001b[36mConfigurationManager.__init__\u001b[39m\u001b[34m(self, config_filepath, params_filepath, schema_filepath)\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__init__\u001b[39m(\n\u001b[32m      3\u001b[39m     \u001b[38;5;28mself\u001b[39m,\n\u001b[32m      4\u001b[39m     config_filepath = CONFIG_FILE_PATH,\n\u001b[32m      5\u001b[39m     params_filepath = PARAMS_FILE_PATH,\n\u001b[32m      6\u001b[39m     schema_filepath = SCHEMA_FILE_PATH):\n\u001b[32m      8\u001b[39m     \u001b[38;5;28mself\u001b[39m.config = read_yaml(config_filepath)\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m     \u001b[38;5;28mself\u001b[39m.params = \u001b[43mread_yaml\u001b[49m\u001b[43m(\u001b[49m\u001b[43mparams_filepath\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     10\u001b[39m     \u001b[38;5;28mself\u001b[39m.schema = read_yaml(schema_filepath)\n\u001b[32m     12\u001b[39m     create_directories([\u001b[38;5;28mself\u001b[39m.config.artifacts_root])\n",
+      "\u001b[36mFile \u001b[39m\u001b[32md:\\CDAC\\Project\\AI-Driven-Personal-Financial-Risk-Spending-Behavior-Analyzer\\src\\MLOPs\\utils\\common.py:33\u001b[39m, in \u001b[36mread_yaml\u001b[39m\u001b[34m(path_to_yaml)\u001b[39m\n\u001b[32m     31\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m ConfigBox(content)\n\u001b[32m     32\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m BoxValueError:\n\u001b[32m---> \u001b[39m\u001b[32m33\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33myaml file is empty\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     34\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m     35\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m e\n",
+      "\u001b[31mValueError\u001b[39m: yaml file is empty"
      ]
     }
    ],
