--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,13 +72,13 @@
     "@dataclass(frozen=True)\n",
     "class DataIngestionConfig:\n",
     "    root_dir: Path\n",
-    "    source_URL: str\n",
+    "    source_url: str\n",
     "    local_data_file: Path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,101 +115,61 @@
     "\n",
     "\n",
     "    \n",
-    "    def get_data_ingestion_config(self) -> DataIngestionConfig:\n",
-    "        config = self.config.data_ingestion\n",
+    "    def get_data_ingestion_config(self):\n",
     "\n",
+    "        config = self.config.data_ingestion\n",
     "        create_directories([config.root_dir])\n",
     "\n",
-    "        data_ingestion_config = DataIngestionConfig(\n",
-    "            root_dir=config.root_dir,\n",
-    "            source_URL=config.source_URL,\n",
-    "            local_data_file=config.local_data_file,\n",
-    "            unzip_dir=config.unzip_dir \n",
-    "        )\n",
-    "\n",
-    "        return data_ingestion_config"
+    "        return config\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import urllib.request as request\n",
-    "import zipfile\n",
+    "import shutil\n",
     "from src.MLOPs import logger\n",
-    "from src.MLOPs.utils.common import get_size"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from src.MLOPs.utils.common import get_size\n",
+    "\n",
     "class DataIngestion:\n",
-    "    def __init__(self, config: DataIngestionConfig):\n",
+    "    def __init__(self, config):\n",
     "        self.config = config\n",
     "\n",
+    "    def copy_local_file(self):\n",
+    "        try:\n",
+    "            source = self.config.source_url\n",
+    "            destination = self.config.local_data_file\n",
     "\n",
-    "    \n",
-    "    def download_file(self):\n",
-    "        if not os.path.exists(self.config.local_data_file):\n",
-    "            filename, headers = request.urlretrieve(\n",
-    "                url = self.config.source_URL,\n",
-    "                filename = self.config.local_data_file\n",
-    "            )\n",
-    "            logger.info(f\"{filename} download! with following info: \\n{headers}\")\n",
-    "        else:\n",
-    "            logger.info(f\"File already exists of size: {get_size(Path(self.config.local_data_file))}\")\n",
+    "            os.makedirs(os.path.dirname(destination), exist_ok=True)\n",
+    "            shutil.copy(source, destination)\n",
     "\n",
+    "            logger.info(f\"File copied from {source} to {destination}\")\n",
+    "            logger.info(f\"File size: {get_size(destination)}\")\n",
     "\n",
-    "\n",
-    "    def extract_zip_file(self):\n",
-    "        \"\"\"\n",
-    "        zip_file_path: str\n",
-    "        Extracts the zip file into the data directory\n",
-    "        Function returns None\n",
-    "        \"\"\"\n",
-    "        unzip_path = self.config.unzip_dir\n",
-    "        os.makedirs(unzip_path, exist_ok=True)\n",
-    "        with zipfile.ZipFile(self.config.local_data_file, 'r') as zip_ref:\n",
-    "            zip_ref.extractall(unzip_path)\n",
-    "  "
+    "        except Exception as e:\n",
+    "            raise e\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2026-01-19 23:39:51,906: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2026-01-19 23:39:51,910: INFO: common: yaml file: params.yaml loaded successfully]\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "yaml file is empty",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mBoxValueError\u001b[39m                             Traceback (most recent call last)",
-      "\u001b[36mFile \u001b[39m\u001b[32md:\\CDAC\\Project\\AI-Driven-Personal-Financial-Risk-Spending-Behavior-Analyzer\\src\\MLOPs\\utils\\common.py:31\u001b[39m, in \u001b[36mread_yaml\u001b[39m\u001b[34m(path_to_yaml)\u001b[39m\n\u001b[32m     30\u001b[39m         logger.info(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33myaml file: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpath_to_yaml\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m loaded successfully\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m31\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mConfigBox\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcontent\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     32\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m BoxValueError:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Admin\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\box\\box.py:247\u001b[39m, in \u001b[36mBox.__init__\u001b[39m\u001b[34m(self, default_box, default_box_attr, default_box_none_transform, default_box_create_on_get, frozen_box, camel_killer_box, conversion_box, modify_tuples_box, box_safe_prefix, box_duplicates, box_intact_types, box_recast, box_dots, box_class, *args, **kwargs)\u001b[39m\n\u001b[32m    246\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(args[\u001b[32m0\u001b[39m], \u001b[38;5;28mstr\u001b[39m):\n\u001b[32m--> \u001b[39m\u001b[32m247\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m BoxValueError(\u001b[33m\"\u001b[39m\u001b[33mCannot extrapolate Box from string\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    248\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(args[\u001b[32m0\u001b[39m], Mapping):\n",
-      "\u001b[31mBoxValueError\u001b[39m: Cannot extrapolate Box from string",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[48]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      6\u001b[39m     data_ingestion.extract_zip_file()\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m e\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[48]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m     config = \u001b[43mConfigurationManager\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m     data_ingestion_config = config.get_data_ingestion_config()\n\u001b[32m      4\u001b[39m     data_ingestion = DataIngestion(config=data_ingestion_config)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[41]\u001b[39m\u001b[32m, line 9\u001b[39m, in \u001b[36mConfigurationManager.__init__\u001b[39m\u001b[34m(self, config_filepath, params_filepath, schema_filepath)\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__init__\u001b[39m(\n\u001b[32m      3\u001b[39m     \u001b[38;5;28mself\u001b[39m,\n\u001b[32m      4\u001b[39m     config_filepath = CONFIG_FILE_PATH,\n\u001b[32m      5\u001b[39m     params_filepath = PARAMS_FILE_PATH,\n\u001b[32m      6\u001b[39m     schema_filepath = SCHEMA_FILE_PATH):\n\u001b[32m      8\u001b[39m     \u001b[38;5;28mself\u001b[39m.config = read_yaml(config_filepath)\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m     \u001b[38;5;28mself\u001b[39m.params = \u001b[43mread_yaml\u001b[49m\u001b[43m(\u001b[49m\u001b[43mparams_filepath\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     10\u001b[39m     \u001b[38;5;28mself\u001b[39m.schema = read_yaml(schema_filepath)\n\u001b[32m     12\u001b[39m     create_directories([\u001b[38;5;28mself\u001b[39m.config.artifacts_root])\n",
-      "\u001b[36mFile \u001b[39m\u001b[32md:\\CDAC\\Project\\AI-Driven-Personal-Financial-Risk-Spending-Behavior-Analyzer\\src\\MLOPs\\utils\\common.py:33\u001b[39m, in \u001b[36mread_yaml\u001b[39m\u001b[34m(path_to_yaml)\u001b[39m\n\u001b[32m     31\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m ConfigBox(content)\n\u001b[32m     32\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m BoxValueError:\n\u001b[32m---> \u001b[39m\u001b[32m33\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33myaml file is empty\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     34\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m     35\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m e\n",
-      "\u001b[31mValueError\u001b[39m: yaml file is empty"
+      "[2026-01-20 00:03:35,583: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2026-01-20 00:03:35,586: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2026-01-20 00:03:35,589: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2026-01-20 00:03:35,592: INFO: common: created directory at: artifacts]\n",
+      "[2026-01-20 00:03:35,594: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2026-01-20 00:03:35,693: INFO: 3966312363: File copied from D:/CDAC/Project/AI-Driven-Personal-Financial-Risk-Spending-Behavior-Analyzer/Dataset/final_financial_risk_dataset.csv to artifacts/data_ingestion/final_financial_risk_dataset.csv]\n",
+      "[2026-01-20 00:03:35,707: INFO: 3966312363: File size: ~ 6 KB]\n"
      ]
     }
    ],
@@ -218,8 +178,7 @@
     "    config = ConfigurationManager()\n",
     "    data_ingestion_config = config.get_data_ingestion_config()\n",
     "    data_ingestion = DataIngestion(config=data_ingestion_config)\n",
-    "    data_ingestion.download_file()\n",
-    "    data_ingestion.extract_zip_file()\n",
+    "    data_ingestion.copy_local_file()\n",
     "except Exception as e:\n",
     "    raise e"
    ]
